--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-placeholder
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=math_and_calculator.html">
+</head>
+<body>
+    Redirecting...
+</body>
+</html>
