--- a/cookbook.html
+++ b/cookbook.html
@@ -6,64 +6,64 @@
     <title>The Howards Cookbook</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif
-            margin: 20px
-            background-color: #f8f8f8
-            color: #333
+            font-family: 'Arial', sans-serif;
+            margin: 20px;
+            background-color: #f8f8f8;
+            color: #333;
         }
         h1, h2 {
-            color: #444
+            color: #444;
         }
         form {
-            background-color: #fff
-            padding: 20px
-            border-radius: 8px
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
-            margin-bottom: 20px
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
         label {
-            display: block
-            margin-bottom: 8px
+            display: block;
+            margin-bottom: 8px;
         }
         input, textarea {
-            width: 100%
-            padding: 8px
-            margin-bottom: 16px
-            box-sizing: border-box
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 16px;
+            box-sizing: border-box;
         }
         button {
-            background-color: #4caf50
-            color: #fff
-            padding: 10px 16px
-            border: none
-            border-radius: 4px
-            cursor: pointer
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px 16px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
         }
         button:hover {
-            background-color: #45a049
+            background-color: #45a049;
         }
         ul {
-            list-style: none
-            padding: 0
+            list-style: none;
+            padding: 0;
         }
         li {
-            background-color: #fff
-            padding: 15px
-            margin-bottom: 10px
-            border-radius: 8px
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
+            background-color: #fff;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         li strong {
-            font-size: 1.2em
-            color: #333
+            font-size: 1.2em;
+            color: #333;
         }
         li em {
-            color: #555
-            display: block
-            margin-top: 10px
+            color: #555;
+            display: block;
+            margin-top: 10px;
         }
         li button {
-            margin-top: 8px
+            margin-top: 8px;
         }
     </style>
 </head>
